--- a/Tubaina.html
+++ b/Tubaina.html
@@ -8,6 +8,7 @@
 
   </head>
   <body>
+    Trago a vocês tudo ,tudo do mais bruto e lapidado da mente humana, poemas, textos, escritos obscuros e salvadores, trago a vocês a visão de uma mente conturbada pela calmaria do vazio, trago a vocês o princip9io da humanidade, a ideia de um mundo diferente, com cores preto e branco, um mundo mudado pelo cansaço e desfeitos.                demon_of_blood
     <main>
     </main>
     <script src="sketch.js"></script>
