--- a/Tubaina.html
+++ b/Tubaina.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
+<h1>demons_of_blood</h1>
 
-  </head>
-  <body>
-    Trago a vocês tudo ,tudo do mais bruto e lapidado da mente humana, poemas, textos, escritos obscuros e salvadores, trago a vocês a visão de uma mente conturbada pela calmaria do vazio, trago a vocês o princip9io da humanidade, a ideia de um mundo diferente, com cores preto e branco, um mundo mudado pelo cansaço e desfeitos.                demon_of_blood.
-    <main>
-    </main>
-    <script src="sketch.js"></script>
-  </body>
-</html>
+<p>Trago a vocês tudo ,tudo do mais bruto e lapidado da mente humana, poemas, textos, escritos obscuros e salvadores, trago a vocês a visão de uma mente conturbada pela calmaria do vazio, trago a vocês o principio da humanidade, a ideia de um mundo diferente, com cores preto e branco, um mundo mudado pelo cansaço e desfeitos.                demon_of_blood.</p>
+
+<p>Nossa missão é mostrr tudo o que se esconde nas sombras.</p>
 
