--- a/Tubaina.html
+++ b/Tubaina.html
@@ -1,6 +1,9 @@
+<html>
+
 <h1>demons_of_blood</h1>
 
 <p>Trago a vocês tudo ,tudo do mais bruto e lapidado da <strong>mente humana</strong> , poemas, textos, escritos obscuros e salvadores, trago a vocês a visão de uma mente conturbada pela calmaria do <strong>vazio</strong>, trago a vocês o principio da humanidade, a ideia de um mundo diferente, com cores preto e branco, um mundo mudado pelo cansaço e desfeitos.             <strong>demon_of_blood</strong>   .</p>
 
 <p>Nossa missão é mostre tudo o que se esconde nas sombras.</p>
 
+<html>
