--- a/Tubaina.html
+++ b/Tubaina.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
+  <meta charste="UTF-8">
+
+<title>demon_of_blood</title>
 
 <h1>demons_of_blood</h1>
 
