--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 
 <h1>demons_of_blood</h1>
 
-<p>Trago a vocês tudo ,tudo do mais bruto e lapidado da <strong>mente humana</strong> 
-  , poemas, textos, escritos obscuros e salvadores, trago a vocês a visão de 
-  uma mente conturbada pela calmaria do <strong>vazio</strong>, trago a vocês
+<p>Trago a vocês tudo ,tudo do mais bruto e 
+  lapidado da <strong>mente humana</strong> 
+  , poemas, textos, escritos obscuros e salvadores,
+   trago a vocês a visão de uma mente conturbada pela
+    calmaria do <strong>vazio</strong>, trago a vocês
    o principio da humanidade, a ideia de um mundo diferente,
     com cores preto e branco, um mundo mudado pelo cansaço e desfeitos.            
     
