--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
-
-
 <html>
-<html lang="pt-br">
-   <meta charset="UTF-8>"
-   <title>demon_of_blood</title>
-=======
-<html lang="pt-br">
-  <meta charste="UTF-8">
->>>>>>> 7de359cf17cb87299cb6bbc9f20f72f74fe7039b
-
-
-<h1>demons_of_blood</h1>
-
-<p>Trago a vocês tudo ,tudo do mais bruto e 
-  lapidado da <strong>mente humana</strong> 
-  , poemas, textos, escritos obscuros e salvadores,
-   trago a vocês a visão de uma mente conturbada pela
-    calmaria do <strong>vazio</strong>, trago a vocês
-   o principio da humanidade, a ideia de um mundo diferente,
-    com cores preto e branco, um mundo mudado pelo cansaço e desfeitos.            
-    
-                                                                                <strong>demon_of_blood</strong>   .</p>
-
-<p>Nossa missão é mostre tudo o que se esconde nas sombras.</p>
-
-<html>
+<head>
+    <style>
+        .center {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            height: 100vh;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <div class="center">
+        <div>
+            <h1>Seu Poema</h1>
+            <p>Este é o primeiro verso do seu poema,</p>
+            <p>Este é o segundo verso do seu poema.</p>
+        </div>
+        <div>
+            <video width="320" height="240" controls>
+                <source src="filme.mp4" type="video/mp4">
+                Seu navegador não suporta o elemento de vídeo.
+            </video>
+        </div>
+    </div>
+</body>
+</html>
