--- a/index.html
+++ b/index.html
@@ -15,13 +15,28 @@
 <body>
     <div class="center">
         <div>
-            <h1>Seu Poema</h1>
-            <p>Este é o primeiro verso do seu poema,</p>
-            <p>Este é o segundo verso do seu poema.</p>
+            <h1>Me and Your Mama</h1>
+            <p>I'm in love when we are smoking that la-la-la-la-la
+                I'm in love when we are smoking that la-la-la-la-la
+                I'm in love when we are smoking that la-la-la-la-la
+                I'm in love when we are smoking that la-la-la-la-la
+                I'm in love when we are smoking that la-la-la-la-la
+                I'm in love when we are smoking that la-la-la-la-la
+                I'm in love when we are smoking that la-la-la-la-la
+                I'm in love when we are smoking that la-la-la-la-la</p>
+            <p>Do what you want
+I'm telling you
+Let me into your heart
+Can't stand it, backhanded
+They wanna see us falling apart
+You know that I love you
+So let me into you, woo
+.</p>
         </div>
         <div>
             <video width="320" height="240" controls>
                 <source src="filme.mp4" type="video/mp4">
+                <link rel="stylesheet" href="https://youtu.be/YAgJ9XugGBo?si=XcKLL-CQrur-jv3g">
                 Seu navegador não suporta o elemento de vídeo.
             </video>
         </div>
