--- a/index.html
+++ b/index.html
@@ -16,14 +16,7 @@
     <div class="center">
         <div>
             <h1>Me and Your Mama</h1>
-            <p>I'm in love when we are smoking that la-la-la-la-la
-                I'm in love when we are smoking that la-la-la-la-la
-                I'm in love when we are smoking that la-la-la-la-la
-                I'm in love when we are smoking that la-la-la-la-la
-                I'm in love when we are smoking that la-la-la-la-la
-                I'm in love when we are smoking that la-la-la-la-la
-                I'm in love when we are smoking that la-la-la-la-la
-                I'm in love when we are smoking that la-la-la-la-la</p>
+            <p> wtf</p>
             <p>Do what you want
 I'm telling you
 Let me into your heart
@@ -37,7 +30,7 @@ So let me into you, woo
             <video width="320" height="240" controls>
                 <source src="filme.mp4" type="video/mp4">
                 <link rel="stylesheet" href="https://youtu.be/YAgJ9XugGBo?si=XcKLL-CQrur-jv3g">
-                Seu navegador não suporta o elemento de vídeo.
+               
             </video>
         </div>
     </div>
