--- a/index.html
+++ b/index.html
@@ -1,38 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <style>
-        .center {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100vh;
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
-    <div class="center">
-        <div>
-            <h1>Me and Your Mama</h1>
-            <p> wtf</p>
-            <p>Do what you want
-I'm telling you
-Let me into your heart
-Can't stand it, backhanded
-They wanna see us falling apart
-You know that I love you
-So let me into you, woo
-.</p>
-        </div>
-        <div>
-            <video width="320" height="240" controls>
-                <source src="audio.mp3" type="audio/mp3">
-                <link rel="stylesheet" href="https://www.youtube.com/watch?v=Lldj2OgfU-w">
-               
-            </video>
-        </div>
-    </div>
-</body>
-</html>
+<div class="poema">
+    <h1 class="poema-cabecalho">oh-my-god-meme</h1>
+    <p class="poema-corpo">oh my oh-my-god-meme...</p>
+    <audio class="poema-audio" controls>
+        <source src="https://soundboardguy.com/sounds/oh-my-god-meme/" type="audio/mpeg">
+        Seu navegador não suporta o elemento de áudio.
+    </audio>
+</div>
