--- a/index.html
+++ b/index.html
@@ -1,8 +1,56 @@
-<div class="poema">
-    <h1 class="poema-cabecalho">oh-my-god-meme</h1>
-    <p class="poema-corpo">oh my oh-my-god-meme...</p>
-    <audio class="poema-audio" controls>
-        <source src="https://soundboardguy.com/sounds/oh-my-god-meme/" type="audio/mpeg">
-        Seu navegador não suporta o elemento de áudio.
-    </audio>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        /* Estilo para o cabeçalho do site */
+        .site-cabecalho {
+            font-size: 2.5em;
+            font-weight: bold;
+            text-align: center;
+            color: #333;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px #999;
+        }
+
+        /* Estilo para o título do poema */
+        .poema-titulo {
+            font-size: 2em;
+            font-weight: bold;
+            text-align: center;
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        /* Estilo para o corpo do poema */
+        .poema-corpo {
+            font-size: 1.2em;
+            line-height: 1.6;
+            color: #666;
+            text-align: justify;
+            margin-bottom: 30px;
+            background-color: #f9f9f9;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+        }
+
+        /* Estilo para o fim do poema */
+        .poema-fim {
+            font-size: 1.2em;
+            font-weight: bold;
+            text-align: right;
+            color: #333;
+            margin-top: 30px;
+        }
+    </style>
+</head>
+<body>
+    <h1 class="site-cabecalho">Bem-vindo ao nosso site de poemas!</h1>
+
+    <div class="poema">
+        <h2 class="poema-titulo">Título do Poema</h2>
+        <p class="poema-corpo">Aqui vai o corpo do poema...</p>
+        <p class="poema-fim">Fim do poema.</p>
+    </div>
+</body>
+</html>
