--- a/index.html
+++ b/index.html
@@ -1,56 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <style>
-        /* Estilo para o cabeçalho do site */
-        .site-cabecalho {
-            font-size: 2.5em;
-            font-weight: bold;
-            text-align: center;
-            color: #333;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 4px #999;
-        }
+<div class="container"></div>
 
-        /* Estilo para o título do poema */
-        .poema-titulo {
-            font-size: 2em;
-            font-weight: bold;
-            text-align: center;
-            color: #333;
-            margin-bottom: 20px;
-        }
-
-        /* Estilo para o corpo do poema */
-        .poema-corpo {
-            font-size: 1.2em;
-            line-height: 1.6;
-            color: #666;
-            text-align: justify;
-            margin-bottom: 30px;
-            background-color: #f9f9f9;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-        }
-
-        /* Estilo para o fim do poema */
-        .poema-fim {
-            font-size: 1.2em;
-            font-weight: bold;
-            text-align: right;
-            color: #333;
-            margin-top: 30px;
-        }
-    </style>
-</head>
-<body>
-    <h1 class="site-cabecalho">Bem-vindo ao nosso site de poemas!</h1>
-
-    <div class="poema">
-        <h2 class="poema-titulo">Título do Poema</h2>
-        <p class="poema-corpo">Aqui vai o corpo do poema...</p>
-        <p class="poema-fim">Fim do poema.</p>
+<nav class="pull-right">
+    <a class="btn-acesso-info 0" href="http://www.transparencia.pr.gov.br/" target="_blank" rel="nofollow">Portal da Transparência</a>
+    <a class="btn-desaparecidos 0" href="http://www.desaparecidos.pr.gov.br/desaparecidos/index.do?action=index" target="_blank" rel="nofollow"><i class="fa fa-male" aria-hidden="true"></i> Pessoas Desaparecidas</a>
+    <div class="btn-group">
+        <button type="button" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            GOVERNO DO PARANÁ <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+            <li><a class="dropdown-item 0" href="http://www.parana.pr.gov.br/Pagina/Orgaos-e-Entidades" aria-label="Estrutura do Governo do Paraná" target="_blank" rel="nofollow">Estrutura</a></li>
+            <li><a class="dropdown-item 0" href="https://www.pia.pr.gov.br/" aria-label="Piá, Paraná Inteligência Artificial" target="_blank" rel="nofollow">PIÁ</a></li>
+            <li><a class="dropdown-item 0" href="http://www.aen.pr.gov.br/" aria-label="Agência de Notícias do Estado do Paraná" target="_blank" rel="nofollow">Agência de Notícias</a></li>
+            <li><a class="dropdown-item 0" href="https://www.pia.pr.gov.br/servicos/Direitos/Ouvidoria/Registrar-solicitacao-na-Ouvidoria-do-Estado-do-Parana-eVoGZarb" aria-label="Ouvidoria do Estado do Paraná" target="_blank" rel="nofollow">Ouvidoria</a></li>
+        </ul>
     </div>
-</body>
-</html>
+    
+</nav>
+
+
+
+
+
+
+
+
+
+
